--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
     background-color: lightgray;
-    font-family: Arial;
+    font-family: Helvetica;
     text-align: center;
     display: flex;
     align-items: center;
@@ -9,27 +9,31 @@ body {
     justify-content: center;
   }
   
-  h1 {
-    font-size: 72px;
-  }
-  
-  p {
-    font-size: 28px;
-  }
-  
-  button {
-      color: white;
-      font-size: 125%;
-      border-radius: 4px;
-      border: none;
-      text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-      background: rgb(28, 184, 65);
-      padding: 10px;
-      outline: none;
-      cursor: pointer;
-  }
-  
-  button:hover {
-    background: rgb(66, 184, 221);
-    padding: 12px;
-  }
+h1 {
+  color:blueviolet;
+  font-size: 72px;
+}
+
+h2 {
+  font-size: 48px;
+}
+
+p {
+  font-size: 28px;
+}
+
+button {
+    color: white;
+    font-size: 125%;
+    border-radius: 4px;
+    border: none;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    background: rgb(28, 184, 65);
+    padding: 18px 32px;
+    outline: none;
+    cursor: pointer;
+}
+
+button:hover {
+  background: rgb(66, 184, 221);
+}
