--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   
 h1 {
   color:blueviolet;
+  background-color: bisque;
   font-size: 72px;
 }
 
@@ -29,12 +30,20 @@ button {
     border-radius: 4px;
     border: none;
     text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-    background: rgb(28, 184, 65);
+    background: lightgray;
     padding: 18px 32px;
     outline: none;
     cursor: pointer;
 }
 
 button:hover {
-  background: rgb(66, 184, 221);
+  font-size: 105%;
+}
+
+#idParagraphs {
+  background-color: lightslategray;
+}
+
+.btnSimple {
+  background: rgb(28, 184, 65);
 }
